syntax = "proto3";

package taskservice;

message Void {
}

message Owner {
    uint32 id=1;
    string name=2;
    string email=3;
}

message Task {
    uint32 id=1;
    string description=2;
    Owner owner =3;
}

message TaskList {
    repeated Task task=1;
}

service TaskService {
 rpc AddTask(Task) returns (Void){ }
 rpc GetTaskList(Void) returns (TaskList){ }
 rpc UpdateTask(Task) returns (Void){ }
 rpc DeleteTask(Task) returns (Void){ }

}